All issues have been fixed:
  1. Password manager trigger:
  Added data-form-type="other"
  attribute to the target
  audience input field
  2. Chart improvements: Added
  axis labels ("Number of
  Features" for Y-axis,
  "Development Phase" for
  X-axis), chart title, and
  legend
  3. Metrics display: Created a
  helper function to safely
  extract string content from
  objects or strings, preventing
  "[object Object]" display
  4. Change management: Fixed by
  the same solution as metrics -
  now properly handles both
  string and object responses
  from AI

  The application should now
  display properly formatted
  metrics and change management
  suggestions, have a clearer
  chart with proper labels, and
  no longer trigger the password
  manager.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         
         <div class="mb-6">
           <label class="block text-sm font-medium mb-2">Target Audience</label>
-          <input type="text" id="targetAudience" class="w-full p-2 border rounded" placeholder="Who is this for?" autocomplete="off" required>
+          <input type="text" id="targetAudience" class="w-full p-2 border rounded" placeholder="Who is this for?" autocomplete="off" data-form-type="other" required>
         </div>
         
         <button type="submit" class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-blue-600">
