Phase 3 components from the    UI_REDESIGN_PLAN.md:
  ✅ Completed Components:

  1. Neural Input Fields -
  Enhanced with:
    - Scanner animations
  (horizontal and vertical)
    - Input glow effects
    - Ripple effects on click
    - Corner clip decorations
    - Animated placeholders
    - Error/success/warning
  states
  2. Quantum Buttons - Featuring:
    - Glitch effects on click
    - Scanner overlay animations
    - Circuit pattern overlays
    - Particle explosion effects
    - Loading states with
  spinning indicators
    - Multiple size and color
  variants
  3. Cyber Select Dropdowns -
  Including:
    - Custom styled dropdowns
    - Animated arrows
    - Scanner lines
    - Hover and focus effects
    - Custom dropdown menu
  implementation
  4. Holographic Cards - With:
    - Iridescent shimmer effects
    - 3D tilt on hover
    - Animated border gradients
    - Glass morphism overlays
    - Scanning border animations
    - Content fade-in effects
    - Pulse animations
  5. Form Validation Styling -
  Added:
    - Success/error/warning
  states
    - Real-time validation
  indicators
    - Password strength meters
    - Validation messages
    - Form submit animations
    - Field focus order
  indicators

  🔧 Integration:

  - Created
  cyberpunk-components.js to
  enhance HTML elements with the
  new component features
  - All components are properly
  integrated with the existing
  form
  - Results sections will
  automatically convert to
  holographic cards
  - Form validation is fully
  functional with cyberpunk
  effects

  The application now features a
  complete cyberpunk aesthetic
  with all Phase 3 components
  fully implemented and ready to
  use. The server is running at
  http://localhost:3001 for
  testing.

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
   </div>
   
   <script src="cyberpunk-effects.js"></script>
+  <script src="cyberpunk-components.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
