--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="neural-input">
           <label id="apiKeyLabel">API Key <span id="apiKeyHelp" class="text-cyan-400 cursor-pointer hover:text-cyan-300 text-sm ml-2 underline">Need help?</span></label>
           <div class="neural-input-wrapper">
-            <input type="password" id="apiKey" placeholder="Your API key" required>
+            <input type="password" id="apiKey" placeholder="Your API key" autocomplete="off" data-form-type="other" data-lpignore="true" data-1p-ignore data-bwignore data-webkit-autofill="false" role="textbox" readonly onfocus="this.removeAttribute('readonly');" required>
             <div class="input-glow"></div>
             <div class="input-scanner"></div>
             <div class="input-scanner-vertical"></div>
@@ -62,7 +62,7 @@
         <div class="neural-input">
           <label id="productIdeaLabel">Product Idea</label>
           <div class="neural-input-wrapper">
-            <textarea id="productIdea" rows="3" placeholder="Describe your product idea..." required></textarea>
+            <textarea id="productIdea" rows="3" placeholder="Describe your product idea..." autocomplete="off" data-form-type="other" data-lpignore="true" data-1p-ignore data-bwignore data-webkit-autofill="false" role="textbox" readonly onfocus="this.removeAttribute('readonly');" required></textarea>
             <div class="input-glow"></div>
             <div class="input-scanner"></div>
             <div class="input-scanner-vertical"></div>
@@ -72,7 +72,7 @@
         <div class="neural-input">
           <label id="targetAudienceLabel">Target Audience</label>
           <div class="neural-input-wrapper">
-            <input type="text" id="targetAudience" placeholder="Who is this for?" autocomplete="off" data-form-type="other" required>
+            <input type="text" id="targetAudience" placeholder="Who is this for?" autocomplete="off" data-form-type="other" data-lpignore="true" data-1p-ignore data-bwignore data-webkit-autofill="false" role="textbox" readonly onfocus="this.removeAttribute('readonly');" required>
             <div class="input-glow"></div>
             <div class="input-scanner"></div>
             <div class="input-scanner-vertical"></div>
