Fix canvas reuse issue and add clear button functionality
- Fix Chart.js canvas reuse error by destroying existing chart before creating new one
- Add bilingual clear button to reset form fields and hide results
- Disable generate button during processing to prevent multiple submissions
- Re-enable generate button after completion or error
- Clear validation errors when clearing form

--- a/public/index.html
+++ b/public/index.html
@@ -79,9 +79,14 @@
           </div>
         </div>
         
-        <button type="submit" class="quantum-btn" id="generateButton">
-          Generate Roadmap
-        </button>
+        <div class="flex gap-4">
+          <button type="submit" class="quantum-btn flex-1" id="generateButton">
+            Generate Roadmap
+          </button>
+          <button type="button" class="quantum-btn-secondary" id="clearButton">
+            Clear
+          </button>
+        </div>
       </form>
     </div>
     
